--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,23 @@
   "name": "我的小手机",
   "short_name": "小手机",
   "description": "日系奶油风虚拟手机",
-  "start_url": "/dxyphone/",
-  "scope": "/dxyphone/",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#FFF5E6",
   "theme_color": "#FFFFFF",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/dxyphone/my-icon.png",
-      "sizes": "any",
-      "type": "image/svg+xml",
+      "src": "/my-icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/dxyphone/my-icon.png",
+      "src": "/my-icon.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
